ready to start adding comments